// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dialog renders correctly 1`] = `
<div
  class="sc-papXJ kWAgoz"
>
  <div />
  <div>
    <div
      class="mc-dialog--header"
    >
      <div />
      <button>
        ×
      </button>
    </div>
    <div
      class="mc-dialog--body"
    />
    <div
      class="mc-dialog--footer"
    >
      <div
        class="sc-eCYdqJ kzYShP"
      >
        <button
          class="sc-dkzDqf jDNTby"
        >
          Cancel
        </button>
      </div>
      <div
        class="sc-eCYdqJ kzYShP"
      >
        <button
          class="sc-dkzDqf hfzxvO"
        >
          Submit
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dialog renders modal 1`] = `
<div
  class="sc-papXJ kWAgoz"
>
  <div />
  <div>
    <div
      class="mc-dialog--header"
    >
      <div />
    </div>
    <div
      class="mc-dialog--body"
    />
    <div
      class="mc-dialog--footer"
    >
      <div
        class="sc-eCYdqJ kzYShP"
      >
        <button
          class="sc-dkzDqf jDNTby"
        >
          Cancel
        </button>
      </div>
      <div
        class="sc-eCYdqJ kzYShP"
      >
        <button
          class="sc-dkzDqf hfzxvO"
        >
          Submit
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dialog renders with props 1`] = `
<div
  class="sc-papXJ jzWWDk"
  open=""
>
  <div />
  <div>
    <div
      class="mc-dialog--header"
    >
      <div>
        Dialog Title
      </div>
      <button>
        ×
      </button>
    </div>
    <div
      class="mc-dialog--body"
    >
      Hello Dialog!
    </div>
    <div
      class="mc-dialog--footer"
    >
      <div
        class="sc-eCYdqJ kzYShP"
      >
        <button
          class="sc-dkzDqf jDNTby"
        >
          Cancel
        </button>
      </div>
      <div
        class="sc-eCYdqJ kzYShP"
      >
        <button
          class="sc-dkzDqf hfzxvO"
        >
          Submit
        </button>
      </div>
    </div>
  </div>
</div>
`;
